--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,8 @@
   --color-black-300: rgba(255, 255, 255, 0.125);
 
   /* Added color */
-  --color-vewishdarkblue: #212a3e;
-  --color-vewishblue: #27374d;
+  --color-vewishdarkblue: #00162a;
+  --color-vewishblackblue: #011120;
   --color-vewishblue-100: #526d82;
   --color-vewishblue-200: #9db2bf;
   --color-vewishblue-300: #dde6ed;
@@ -229,4 +229,21 @@ button {
 
 .black-gradient {
   background: linear-gradient(90deg, #161a31 0%, #06091f 100%);
+}
+
+@theme inline {
+  --animate-cell-ripple: cell-ripple var(--duration, 200ms) ease-out none 1
+    var(--delay, 0ms);
+
+  @keyframes cell-ripple {
+    0% {
+      opacity: 0.4;
+    }
+    50% {
+      opacity: 0.8;
+    }
+    100% {
+      opacity: 0.4;
+    }
+  }
 }
